# SAMPTransfer

./: .gitattributes  .gitignore  README.md  attention_viz.ipynb  brunner.sh  byol.py  callbacks.py  clr_gat.py  clr_gat_bkp.py  clr_gat_rerep.py  config.yml  dataloaders.py  dino.py  dino.sh  dino_analysis.ipynb  dino_dataloader.py  download_data.py  environment.yml  evaluator.py  feature_plots.ipynb  fusion.py  losses.py  maml_clr.py  nnclr.py  nnclr_0520-2214.sh  nnclr_gat.py  nnprotoclr.py  optimiser.py  pclr_obow.sh  proto_utils.py  protoclr_obow.py  pyproject.toml  re_rep_effects.ipynb  run_with_submitit.py  save_features.py  self_attention.py  simsiam.py  sk.ipynb  slurm_config.yml  slurm_config_bow_clr.yml  (+4 more)
.github/.workflows/: python-package-conda.yml
.github/workflows/: python-package-conda.yml
SCL/: train_contrastive.py
SCL_bkp/dataset/: transform_cfg.py  utils.py
SCL_bkp/models/: contrast.py
SCL_bkp/scripts/: run.sh
bow/: bow_extractor.py  bow_utils.py  bowpredictor.py  classification.py  datasets.py  feature_extractor.py
cdfsl-benchmark/: README.md  backbone.py  cdfsl_miniimagenet.sh  configs.py  finetune.py  io_utils.py  train.py
cdfsl-benchmark/datasets/: Chest_few_shot.py  CropDisease_few_shot.py  EuroSAT_few_shot.py  ISIC_few_shot.py  contrastive_augmentations.py  miniImageNet_few_shot.py
cdfsl-benchmark/methods/: attentions.py  gat_clr.py  gnn_base.py  graph_generator.py  gutils.py  protoclr.py  re_rank.py
cdfsl-benchmark/unsupervised-track/: cdfsl_miniimagenet.sh
checkpoints/miniimagenet/: conv4.ckpt  conv4b.ckpt
checkpoints/tieredimagenet/: conv4.ckpt  conv4b.ckpt
cli/: custom_cli.py
configs/: simsiam.yaml
configs/colab/: dino.yml
configs/local/: clr_on_bow.yml  config.yml  config_vic.yml  edge.yml  maml_clr.yml  moco.yml  mpnn_label_cleaning.yml  mpnn_re_rep.yml  nnclr.yml  nnclr_gat.yml  nnprotoclr.yml
configs/local/dino/: dino.yml
configs/local/swav/: swav.yml
configs/slurm/: clr_on_bow.yml  edge.yml  edge_re_rep.yml  maml_clr.yml  moco.yaml  moco.yml  mpnn.yml  mpnn_bkp.yml  mpnn_label_cleansing.yml  mpnn_re_rep.yml  nnclr.yml  nnclr_gat.yml  nnprotoclr.yml  sa_edge.yml  slurm_config.yml  slurm_config_bow_clr.yml  vic.yml
dataloaders/: FullSizeIMiniImagenet.py  contrastive_augmentations.py  dataloaders.py  miniImageNet_few_shot.py
feature_extractors/: feature_extractor.py  networks.py  resnet12.py  wrn.py
graph/: attentions.py  equilibirium.py  gat_v2.py  gnn_base.py  latentgnn.py  utils.py
misc/: FullSizeIMiniImagenet.py  dino_utils.py  vision_transformer.py
moco/: moco.py
optimal_transport/: sinkhorn.py  sk_finetuning.py  sot.py
tests/: test_clr_on_bow.py  test_edge_conv.py
tests/configs/: test_clr_on_bow.yml  test_edge.yml
utils/: gnn_wrapper.py  label_cleansing.py  label_cleansing_utils.py  optimal_transport.py  proto_utils.py  rerepresentation.py  sinkhorn.py  sk_finetuning.py  sup_finetuning.py  task_generator.py
utils/full_size_loaders/: miniImageNet_few_shot.py
vicreg/: utils.py
(+2 files in other folders)
