[tool.poetry]
name = "pclrc-obow"
version = "0.1.0"
description = ""
authors = ["Ojas Shirekar <ojas.shirekar@ojas.dev>"]

[tool.poetry.dependencies]
python = "3.9"
torch = "^1.11.0"
torchaudio = "^0.11.0"
torchvision = "^0.12.0"
pytorch-lightning = "1.6.3"
jsonargparse = "^4.3.1"
omegaconf = "^2.2.0"
scipy = "^1.8.0"
torch-scatter = "^2.0.9"
torch-sparse = "^0.6.13"
torch-cluster = "^1.6.0"
torch-spline-conv = "^1.2.1"
torch-geometric = "^2.0.4"
lightning-bolts = "^0.5.0"
llvmlite = "^0.38.0"
umap-learn = "^0.5.3"
scikit-learn = "^1.0.2"
wandb = "^0.12.16"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
plotly = "^5.7.0"
opencv-python = "^4.5.5"
h5py = "^3.6.0"
deepspeed = "^0.6.4"
einops = "^0.4.1"
ordered-set = "^4.1.0"
timm = "^0.5.4"
torchinfo = "^1.6.5"
lightly = "^1.2.14"
submitit = "^1.4.2"
pytorch-metric-learning = "^1.3.0"
higher = "^0.2.1"
kornia = "^0.6.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^8.3.0"
jupyterlab = "^3.4.0"
jupyter-contrib-nbextensions = "^0.5.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
