[tool.poetry]
name = "pclrc-obow"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = ">=3.9"
torch = {version = "^1.11.0+cu113", source = "pytorch"}
torchvision = {version = "0.12.0+cu113", source = "pytorch"}
torchaudio = {version = "^0.11.0+cu113", source = "pytorch"}
pytorch-lightning = "1.6.3"
jsonargparse = "^4.3.1"
omegaconf = "^2.2.0"
scipy = "^1.8.0"
torch-scatter = {version="^2.0.9", source="pyg"}
torch-sparse = {version="^0.6.13", source="pyg"}
torch-cluster = {version="^1.6.0", source="pyg"}
torch-spline-conv = {version="^1.2.1", source="pyg"}
torch-geometric = "^2.0.4"
lightning-bolts = "^0.5.0"
llvmlite = "^0.41.1"
umap-learn = "^0.5.3"
scikit-learn = "^1.0.2"
wandb = "^0.12.16"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
plotly = "^5.7.0"
opencv-python = "^4.5.5"
h5py = "^3.6.0"
deepspeed = "^0.6.4"
einops = "^0.4.1"
ordered-set = "^4.1.0"
timm = "^0.5.4"
torchinfo = "^1.6.5"
lightly = "^1.2.14"
submitit = "^1.4.2"
pytorch-metric-learning = "^1.3.0"
higher = "^0.2.1"
kornia = "^0.6.4"
faiss-cpu = "^1.7.2"
torchattacks = "^3.2.6"
ray = {version = "1.12.0", extras = ["tune"]}
# learn2learn = "^0.1.7"
typer = "^0.4.1"
wasabi = "^0.9.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^8.3.0"
jupyterlab = "^3.4.0"
jupyter-contrib-nbextensions = "^0.5.1"
pdbpp = "^0.10.3"
sacred = "^0.8.2"
typer = "^0.4.1"
torch-summary = "^1.4.5"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113"
priority = "supplemental"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-1.11.0+cu113.html"
priority = "supplemental"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
